Fixed Auto Increment Column exclusion